--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>タイトル</title>
   </head>
   <body>
-    何か書き換えてみます
+    <strong>
+      めっちゃ強そう
+    </strong>
+    好きな総菜発表ドラゴン
   </body>
 </html>
